# advanced-agentic-rag

./: .gitignore  BUGFIX_PLAN.md  CHAT_UI_REVAMP_PLAN.md  CHAT_UI_REVAMP_TODOS.md  CONVERSATIONAL_AGENT_FILES.md  CONVERSATIONAL_AGENT_PLAN.md  DASHBOARD_METRICS_PLAN.md  DEPLOY_PLAN.md  DOCUMENTATION_GUIDE.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  PERFORMANCE_DIAGNOSTIC_GUIDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PRODUCTION_STREAMING_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  THREAD_MANAGEMENT_GUIDE.md  THREAD_MANAGEMENT_IMPLEMENTATION.md  THREAD_MANAGEMENT_IMPLEMENTATION_CHECKLIST.md  THREAD_MANAGEMENT_README.md  TODOS.md  console-logs.md  landing-page.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  CONTEXT.md  Dockerfile  Dockerfile.worker  PHASE2_TODO.md  PHASE6_CHECKLIST.md  PHASE6_IMPLEMENTATION_PLAN.md  Phase4_todos.md  Phase5_Summary.md  TODOS.md  TOKEN_STREAMING_IMPLEMENTATION.md  debug_conflict.py  debug_db.py  debug_rate_limiter.py  docker-compose.yml  inspect_langsmith.py  langgraph.json  langsmith_example_response.md  main.py  probe_delete.py  pyproject.toml  reproduce_flashrank.py  requirements.txt  test_client.html
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: __init__.py  classifier.py  context_loader.py  generator.py  query_expander.py  query_rewriter.py  retriever.py  router.py  simple_answer.py  validator.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  chat.py  documents.py  feedback.py  ingest.py  rate_limit.py  stats.py  threads.py  users.py
backend/app/core/: auth.py  cache.py  config.py  langsmith_service.py  observability.py  rate_limiter.py  storage.py
backend/app/database/: client.py  models.py  pool.py
backend/app/database/repositories/: chunks.py  documents.py  feedback.py  users.py
backend/app/ingestion/: __init__.py  background.py  embeddings.py  parser.py  pipeline.py
backend/app/ingestion/chunkers/: __init__.py  base.py  code_aware.py  contextual.py  parent_child.py  recursive.py  semantic.py
backend/app/retrieval/: __init__.py  hybrid_search.py  query_expansion.py  text_search.py  vector_search.py
backend/app/retrieval/rerankers/: __init__.py  base.py  cohere.py  flashrank.py
backend/app/schemas/: __init__.py  base.py  chat.py  document.py  events.py  feedback.py  requests.py  responses.py  retrieval.py
backend/app/utils/: conversation_summarizer.py  errors.py  logger.py  message_trimmer.py  metrics.py  observability.py  stream_validator.py  title_generator.py  token_counter.py
backend/docs/: ATOMIC_DELETION_IMPLEMENTATION.md  CHECKPOINTER_FIX.md  CITATION_FIX_ROOT_CAUSE.md  PRIVACY_SAFE_LOGGING.md
backend/migrations/: 001_initial_setup.sql  002_update_document_schema.sql  003_revert_user_id_to_text.sql  004_add_text_search.sql  005_add_delete_document_function.sql  006_add_full_name_to_users.sql  007_add_document_title_to_search.sql  008_setup_langgraph_checkpointer.sql  ACTUAL_SCHEMA.md  MIGRATION_GUIDE.md  README.md  apply_005.sh  apply_006.sh  apply_007.sh  apply_008.sh
backend/scripts/: bulk_ingest.py  check_messages.py  check_threads.py  cleanup_orphaned_threads.py  generate_test_jwt.py  ingest_test_data.py  inspect_checkpoint.py  inspect_database_schema.py  inspect_thread.py  run_eval.py  test_auth_curl.sh  test_chat_curl.sh  test_citation_emission.py  test_performance.py  test_sql_functions.py  test_token_streaming.py
backend/tests/: TEST_SETUP_GUIDE.md  conftest.py  test_agent_integration.py  test_api_endpoints.py  test_atomic_deletion.py  test_authentication.py  test_ingestion_pipeline_integration.py  test_retrieval_integration.py  test_sse_streaming.py
docs/: 01_Roadmap.md  02_Planning_ROI.md  03_Planning_and_Architecture.md  04_DB_Design.md  05_RAG_Learning_Topics.md  06_API_Contract.md  07_System_Diagram.md  08_Final_Technical_Decisions.md  09_Phase3_Retrieval_Summary.md  10_Phase4_Agentic_RAG_Plan.md  10_Phase4_Quick_Start.md  README.md
docs/eval-reports/: recursive_smoke_2026-03-11.md
docs/future_enhancements/: FUTURE_ENHANCEMENTS.md  FUTURE_RATE_LIMITING.md  Phase4_Agentic_Improvements.md
frontend/: .env.example  BACKEND_ISSUES_DIAGNOSTIC.md  CHAT_TESTING_GUIDE.md  CHECKPOINT1_SUMMARY.md  CHECKPOINT_3_COMPLETE.md  DOCUMENTS_PAGE_TESTING_CHECKLIST.md  ENHANCED_INPUT_TESTING.md  IMPLEMENTATION_PLAN.md  SSE_STREAMING_IMPLEMENTATION.md  components.json  continuation_prompt.md  documents_page_unification.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: actions.ts  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  loading.tsx
frontend/app/rate-limited/: page.tsx
frontend/app/server-error/: page.tsx
frontend/app/unauthorized/: page.tsx
frontend/components/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx  profile-dropdown-client.tsx  profile-dropdown.tsx  rate-limit-banner.tsx  team-switcher.tsx
frontend/components/ai-elements/: __test-components.tsx  code-block.tsx  inline-citation.tsx  sources.tsx  suggestion.tsx
frontend/components/auth/: user-button-wrapper.tsx  user-sync.tsx
frontend/components/chat/: agent-status.tsx  chat-empty-state.tsx  citation-aware-renderer.tsx  citation-card.tsx  citation.tsx  (+11 more)
frontend/hooks/: useChat.ts  useKeyboardShortcuts.ts  usePlaceholderRotation.ts  useStreamingMetrics.ts  useThreadHistory.ts
frontend/lib/: api-client.ts  document-utils.ts  sanitizer.ts  sse-client.ts  sse-parser.ts  sse-schemas.ts
frontend/stores/: chat-store.ts  rate-limit-store.ts
frontend/types/: chat.ts  dashboard.ts
supabase/migrations/: 20260216080937_add_checkpoints_user_id_index.sql  20260217165257_create_feedback_table.sql  20260303181804_add_checkpoints_channel_user_id_index.sql  20260308045137_create_storage_documents_bucket.sql  20260308052100_enterprise_two_tier_rls.sql  20260308052110_enterprise_contracts_bucket.sql  20260312031458_create_rag_evaluations.sql  20260314000000_add_feedback_updated_at.sql
(+45 files in other folders)
