[project]
name = "integration-forge-backend"
version = "0.1.0"
description = "Production-grade advanced RAG backend with LangGraph, multi-stage chunking, and hybrid search"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and server
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "python-multipart>=0.0.12",
    "starlette>=0.48.0",
    # LangChain ecosystem
    "langchain>=0.3.27",
    "langchain-core>=0.3.78",
    "langchain-openai>=0.3.34",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.0.1",
    "langgraph-checkpoint>=3.0.1",
    "langsmith>=0.4.32",
    "langgraph-cli[inmem]>=0.4.7",
    # Vector store and embeddings
    "supabase>=2.20.0",
    "postgrest>=2.20.0",
    "psycopg[binary]>=3.2.12",
    # Authentication
    "pyjwt>=2.10.1",
    "cryptography>=44.0.3",
    # OpenAI
    "openai>=2.1.0",
    "tiktoken>=0.11.0",
    # Re-ranking
    "flashrank>=0.2.8",
    "cohere>=5.11.0",
    # Text processing
    "pypdf>=5.1.0",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",
    # Environment and config
    "pydantic>=2.11.9",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.1.1",
    # HTTP client
    "httpx>=0.28.1",
    # Utilities
    "tenacity>=9.1.2",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    
    # Code quality
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "black>=24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
]
