[project]
name = "integration-forge-backend"
version = "0.1.0"
description = "Production-grade advanced RAG backend with LangGraph, multi-stage chunking, and hybrid search"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and server
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "starlette",
    # LangChain ecosystem
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-checkpoint-postgres",
    "langsmith",
    "langgraph-cli[inmem]",
    # Vector store and embeddings
    "supabase",
    "postgrest",
    "psycopg[binary]",
    # Authentication
    "pyjwt",
    "cryptography",
    # OpenAI
    "openai",
    "tiktoken",
    # Re-ranking
    "flashrank",
    "cohere",
    # Text processing
    "pypdf",
    "python-magic",
    "chardet",
    # Environment and config
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    # HTTP client
    "httpx",
    # Utilities
    "tenacity",
    "structlog",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    
    # Code quality
    "ruff",
    "mypy",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]
