[project]
name = "integration-forge-backend"
version = "0.1.0"
description = "Production-grade advanced RAG backend with LangGraph, multi-stage chunking, and hybrid search"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and server
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-multipart==0.0.21",
    # LangChain ecosystem
    "langchain==1.2.6",
    "langchain-core==1.2.7",
    "langchain-openai==1.1.7",
    "langchain-text-splitters==1.1.0",
    "langchain-experimental>=0.4.1",
    "langgraph==1.0.7",
    "langgraph-checkpoint==4.0.0",
    "langgraph-checkpoint-postgres==3.0.3",
    "langsmith==0.6.4",
    "langgraph-cli[inmem]==0.4.11",
    # Vector store and embeddings
    "supabase==2.27.2",
    "postgrest==2.27.2",
    "psycopg[binary]==3.3.2",
    # Authentication
    "pyjwt==2.10.1",
    "cryptography==46.0.3",
    # OpenAI
    "openai==2.15.0",
    "tiktoken==0.12.0",
    # Re-ranking
    "flashrank==0.2.10",
    "cohere==5.20.1",
    # Text processing
    "pypdf==6.6.0",
    "python-magic==0.4.27",
    "chardet==5.2.0",
    # Environment and config
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    # HTTP client
    "httpx==0.28.1",
    # Utilities
    "tenacity==9.1.2",
    "structlog==25.5.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.1.0",
    "hiredis>=3.3.0",
    "psycopg-pool>=3.3.0",
    "cachetools>=6.2.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    
    # Code quality
    "ruff==0.14.14",
    "mypy==1.19.1",
    "black==26.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "black==26.1.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "ruff==0.14.14",
]
